force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/clofor_com_cfs__TariffMaster__c.object-meta.xml
<CustomObject>
    <customHelpPage>clofor_com_cfs__page_ServiceMasterOnlineHelp</customHelpPage>
    <description>Service Master</description>
    <label>サービスプライシング</label>
    <nameField>
        <label>SERVICE NAME</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>