force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Air Freight</fullName>
            </value>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Custom Clearance</fullName>
            </value>
            <value>
                <fullName>Local Charge</fullName>
            </value>
            <value>
                <fullName>Ocean Freight</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Trucking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>