force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__Accounting_Code__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Accounting_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipName>SVC_MASTER</relationshipName>
    <type>Lookup</type>
</CustomField>