force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__AIRLINE__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AIRLINE__c</fullName>
    <label>Airline</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add Airline list here</fullName>
            </value>
            <value>
                <fullName>LD-152-AHK AIR HONG KONG</fullName>
            </value>
            <value>
                <fullName>FD-900-AIR ASIA</fullName>
            </value>
            <value>
                <fullName>RU-912-AIR BRIDGE CARGO</fullName>
            </value>
            <value>
                <fullName>BX--AIR BUSAN</fullName>
            </value>
            <value>
                <fullName>AC-014-AIR CANADA</fullName>
            </value>
            <value>
                <fullName>CA-999-AIR CHINA</fullName>
            </value>
            <value>
                <fullName>AF-057-AIR FRANCE</fullName>
            </value>
            <value>
                <fullName>AI-098- AIR INDIA</fullName>
            </value>
            <value>
                <fullName>NQ- - AIR JAPAN</fullName>
            </value>
            <value>
                <fullName>NX-675-AIR MACAU</fullName>
            </value>
            <value>
                <fullName>NH-205-ALL NIPPON AIRWAYS</fullName>
            </value>
            <value>
                <fullName>AA-001-AMERICAN</fullName>
            </value>
            <value>
                <fullName>OZ-988-ASIANA</fullName>
            </value>
            <value>
                <fullName>OS--AUSTRIAN  AG</fullName>
            </value>
            <value>
                <fullName>BA-125-BRITISH AIRWAYS PLC</fullName>
            </value>
            <value>
                <fullName>CV-172-CARGOLUX  INT&apos;L SA</fullName>
            </value>
            <value>
                <fullName>C8-356-CARGOLUX ITALIA SPA</fullName>
            </value>
            <value>
                <fullName>CX-160-CATHAY PACIFIC AIRWAYS</fullName>
            </value>
            <value>
                <fullName>OK-064-CZECH</fullName>
            </value>
            <value>
                <fullName>SC--CHANGDONG</fullName>
            </value>
            <value>
                <fullName>CI-297-CHINA</fullName>
            </value>
            <value>
                <fullName>CK-112-CHINA CARGO</fullName>
            </value>
            <value>
                <fullName>MU-112-CHINA EASTERN</fullName>
            </value>
            <value>
                <fullName>8Y-804-CHINA POSTAL</fullName>
            </value>
            <value>
                <fullName>CZ-784-CHINA SOUTHERN</fullName>
            </value>
            <value>
                <fullName>KA-043-DRAGON AIR</fullName>
            </value>
            <value>
                <fullName>DL-006-DELTA ,</fullName>
            </value>
            <value>
                <fullName>ZE--EASTAR JET</fullName>
            </value>
            <value>
                <fullName>MS-077-EGYPTAIR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>