force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__Carrier_Code__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Carrier_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CARRIER/AIRLINER CODE</label>
    <referenceTo>clofor_com_cfs__Carrier_Code__c</referenceTo>
    <relationshipLabel>SVC PRICING</relationshipLabel>
    <relationshipName>SERVICE_MASTERS</relationshipName>
    <type>Lookup</type>
</CustomField>