force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__CommodityCategory__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CommodityCategory__c</fullName>
    <label>COMMODITY CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ProductCategory</valueSetName>
    </valueSet>
</CustomField>