force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__CUSTOMER__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CUSTOMER__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CUSTOMER</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>PRICING</relationshipName>
    <type>Lookup</type>
</CustomField>