force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__DangerousClassification__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DangerousClassification__c</fullName>
    <label>Dangerous Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__DangerousClassification</valueSetName>
    </valueSet>
</CustomField>