force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__DriverID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DriverID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DRIVER ID</label>
    <referenceTo>clofor_com_cfs__WORKER__c</referenceTo>
    <relationshipName>PRICING</relationshipName>
    <type>Lookup</type>
</CustomField>