force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__EngPrintProduct__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EngPrintProduct__c</fullName>
    <formula>clofor_com_cfs__VATInvoiceAtPrintENG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name is automatically dragged from subcategory(Eng), and it appears on English invoice and D/N, C/N</inlineHelpText>
    <label>SERVICE NAME AT PRINT(ENG)</label>
    <type>Text</type>
</CustomField>