force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__EngSubcategory__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EngSubcategory__c</fullName>
    <label>SUB-CATEGORY(ENG)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>clofor_com_cfs__Subcategory__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Basic charge</fullName>
            </value>
            <value>
                <fullName>OCEAN FREIGHT Surcharge Excluded</fullName>
            </value>
            <value>
                <fullName>OCEAN FREIGHT Surcharge Included</fullName>
            </value>
            <value>
                <fullName>CY Charge</fullName>
            </value>
            <value>
                <fullName>B/L FEE</fullName>
            </value>
            <value>
                <fullName>THC</fullName>
            </value>
            <value>
                <fullName>CFS</fullName>
            </value>
            <value>
                <fullName>FAF</fullName>
            </value>
            <value>
                <fullName>BAF</fullName>
            </value>
            <value>
                <fullName>YAS</fullName>
            </value>
            <value>
                <fullName>EBS</fullName>
            </value>
            <value>
                <fullName>CAF</fullName>
            </value>
            <value>
                <fullName>GBF</fullName>
            </value>
            <value>
                <fullName>FAF/YAS</fullName>
            </value>
            <value>
                <fullName>FAF/BAF</fullName>
            </value>
            <value>
                <fullName>FAF/YAS/EBS</fullName>
            </value>
            <value>
                <fullName>CO-LOAD</fullName>
            </value>
            <value>
                <fullName>HDS</fullName>
            </value>
            <value>
                <fullName>D/O FEE</fullName>
            </value>
            <value>
                <fullName>DOC FEE</fullName>
            </value>
            <value>
                <fullName>System Charges</fullName>
            </value>
            <value>
                <fullName>W/H IN &amp; OUT CHARGE</fullName>
            </value>
            <value>
                <fullName>SEAL</fullName>
            </value>
            <value>
                <fullName>PORT CHARGE(OWN COMPANY FORWARDING)</fullName>
            </value>
            <value>
                <fullName>PORT CHARGE(OTHER&apos;S FORWARDING)</fullName>
            </value>
            <value>
                <fullName>Consolidation Allocation</fullName>
            </value>
            <value>
                <fullName>DETENTION CHARGE</fullName>
            </value>
            <value>
                <fullName>TRUCKING FEE</fullName>
            </value>
            <value>
                <fullName>Triaxial</fullName>
            </value>
            <value>
                <fullName>Wait charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>