force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__FoodSubCategory__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FoodSubCategory__c</fullName>
    <label>Food Sub-Catetgory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__FoodSubCategory</valueSetName>
    </valueSet>
</CustomField>