force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__FREE_DEMURRAGE_EXTENSION__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FREE_DEMURRAGE_EXTENSION__c</fullName>
    <label>FREE DEMURRAGE EXTENSION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>