force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__FSCSCSDetailBuying__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FSCSCSDetailBuying__c</fullName>
    <label>FSC/SCS DETAIL(BUYING)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>