force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__HannyuNouhin__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HannyuNouhin__c</fullName>
    <label>WAREHOUSE/DELIVER TO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>