force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__Kousinbi__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Kousinbi__c</fullName>
    <label>UPDATE DATE</label>
    <type>Date</type>
</CustomField>