force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__Minimum__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Minimum__c</fullName>
    <label>MINIMUM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>