force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__MinMarginRate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MinMarginRate__c</fullName>
    <label>MIN MARGIN RATE%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>