force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__Over1000kgBuying__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Over1000kgBuying__c</fullName>
    <label>+1000k(BUYING)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>