force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__Over300kgBuying__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Over300kgBuying__c</fullName>
    <label>+300k(BUYGING)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>