force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__Pick_Up__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Pick_Up__c</fullName>
    <label>PICK-UP PLACE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>