force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__POD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__POD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port Of Discharge</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipName>SERVICE_MASTER_DELIVERY</relationshipName>
    <type>Lookup</type>
</CustomField>