force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__PODAOAID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PODAOAID__c</fullName>
    <formula>clofor_com_cfs__POD__r.clofor_com_cfs__Fullname__c</formula>
    <label>P.O.D(A.O.A) ID</label>
    <type>Text</type>
</CustomField>