force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__PrintProduct__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PrintProduct__c</fullName>
    <formula>clofor_com_cfs__VATInvoiceAtPrintLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name is automatically dragged from subcategory, and it appears on local invoice</inlineHelpText>
    <label>SERVICE NAME AT PRINT(LOCAL)</label>
    <type>Text</type>
</CustomField>