force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__ProductFlag__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProductFlag__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Whenever make use of the service master, check the box and make it available.</inlineHelpText>
    <label>SERVICE AVAILABILITY</label>
    <type>Checkbox</type>
</CustomField>