force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__ProductID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProductID__c</fullName>
    <displayFormat>S{00000}</displayFormat>
    <label>SERVICE ID</label>
    <type>AutoNumber</type>
</CustomField>