force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__RollupMTRBuyUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupMTRBuyUnitPriceUSD__c</fullName>
    <label>ROLLUP MTR BUYING UNIT PRICE(FCY)</label>
    <summarizedField>clofor_com_cfs__MRTSVCPricing__c.clofor_com_cfs__MaterialBuyingUnitPriceUSD__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__MRTSVCPricing__c.clofor_com_cfs__SVCPricingID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>