force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__RollupSVCBuyUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupSVCBuyUnitPriceLocal__c</fullName>
    <label>ROLLUP SVC BUYING UNIT PRICE(LOCAL)</label>
    <summarizedField>clofor_com_cfs__MRTSVCPricing__c.clofor_com_cfs__SVCBuyingUnitPriceLocal__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__MRTSVCPricing__c.clofor_com_cfs__SVCPricingID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>