force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__ScheduleLink__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ScheduleLink__c</fullName>
    <label>SCHEDULE・LINK OF SERVICE DETAIL</label>
    <type>Url</type>
</CustomField>